# Mx2D

./: README.md  build.cmd  meson.build
src/: main.cpp  meson.build
subprojects/: doctest.wrap  sfml.wrap
tests/: meson.build
